Add support for java.util.Date and extended classes